# pf2021

./: .gitignore  .markdownlint.json  LICENSE  README.md
.github/workflows/: build_and_release.yml
code/: better_word_counting.cpp  complex.cpp  divina_commedia.txt  dynarray.cpp  hello.cpp  integer_square_root_for.cpp  integer_square_root_while.cpp  isqrt.cpp  rational.cpp  smallest_number.cpp  smallest_three_numbers.cpp  smallest_two_numbers.cpp  sum_two_numbers.cpp  word_counting.cpp  word_counting_with_file.cpp
code/chain_sfml_cmake/: .clang-format  CMakeLists.txt  README.md  chain.cpp  chain.hpp  chain.test.cpp  hooke.hpp  main.cpp  ppstate.cpp  ppstate.hpp
code/mandelbrot_sfml/: CMakeLists.txt  main.cpp  main_image.cpp
code/mandelbrot_tty/: main.cpp
doc/: WSLGuide.md  XSrvGuide.md  esercizi.md  macOSGuide.md
labs/lab1/: lab1.md  pi_with_integral.cpp  pi_with_integral_prec.cpp  projectile_motion.cpp
labs/lab2/: lab2.md  regression.test.cpp
labs/lab3/: lab3.md
labs/lab3/solution/: regression.cpp  regression.hpp  regression.test.cpp
labs/lab4/: lab4.md
labs/lab4/solution/: README.md  main.cpp  regression.cpp  regression.hpp  regression.test.cpp
labs/lab5/: lab5.md
labs/lab5/solution/: chain.hpp  main.cpp
labs/lab5/solution/bonus/: chain.hpp  chain.test.cpp  main.cpp
labs/lab5/solution_intermediate/: chain.hpp  chain.test.cpp
progetto/: boids.md  epidemia.md  progetto.md
tex/: .gitignore  frames.tex  frontmatter.tex  introduction.tex  pf2021.tex
